--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "reset";
+@import "config/color";
 @import "modules/messaeges";
+@import "modules/user";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "modules/flash";
