--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,38 +2,22 @@
   .main__group
     .main__group__left
       .main__group__left__gName
-        group-test
+        = @group.name
       .main__group__left__mName
-        member-test
+        - @group.users.each do |user|
+          = user.name
     .main__group__right
       .main__group__right__btn
-        = link_to 'Edit', "#"
-
+        = link_to edit_group_path(@group) do
+          = "Edit"
   .main__messages
-    .main__messages__user
-      .main__messages__user__name
-        masa
-      .main__messages__user__date
-        44444455555555
-    .main__messages__comment
-      ohhaa!
-    .main__messages__user
-      .main__messages__user__name
-        masa2
-      .main__messages__user__date
-        44444458888888
-    .main__messages__comment
-      ohhaa!ee
+    = render @messages
+
 
   .main__formArea
-    = form_with url: "#" do |f|
-      .main__formArea__form
-        .main__formArea__form__iBox
-          = f.text_field :content, class:"main__formArea__form__iBox__field", placeholder: 'type a message'
-          = f.label :image, class: 'main__formArea__form__iBox__image' do
-            =icon('fa','image',class:"main__formArea__form__iBox__image--icon")
-            =f.file_field :image, class: 'main__formArea__form__iBox__image--hidden'
-        %button{type: "submit", class:'main__formArea__form__btn'}
-          Send
-
-
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: "main__formArea__form__iBox__field", placeholder: 'type a message'
+      = f.label :image, class: 'main__formArea__form__iBox__image' do
+        = icon('fa','image',class: "main__formArea__form__iBox__image--icon")
+        = f.file_field :image, class: 'main__formArea__form__iBox__image--hidden'
+      = f.submit 'Send', class: 'form__submit'
