--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -13,9 +13,8 @@
   .sideBar__lower
     .sideBar__lower__group
       - current_user.groups.each do |group|
-        .group
-          = link_to group_messages_path(group) do
-            .group__name
-              = group.name
-            .group__message
-              = group.show_last_message
+        = link_to group_messages_path(group) do
+          .sideBar__lower__group__name
+            = group.name
+          .sideBar__lower__group__message
+            = group.show_last_message
