--- a/app/assets/stylesheets/modules/_messaeges.scss
+++ b/app/assets/stylesheets/modules/_messaeges.scss
@@ -9,6 +9,11 @@ a{
  color: #38aef0;
 }
 
+form{
+  display: flex;
+  align-items: center;
+}
+
 .wrapper{
   height: 100%;
   width: 100%;
@@ -59,7 +64,7 @@ a{
         font-size: 15px;
         color: $wC;
        }
-       &__newMessage{
+       &__message{
         font-size: 11px;
         color: $wC;
         margin: 5px 0 40px 0;
@@ -73,7 +78,6 @@ a{
   height: 100vh;
   width: calc(100vw - 300px);
   background-color: $wC;
-
   &__group{
     height: 100px;
     display: flex;
@@ -107,20 +111,19 @@ a{
 
   }
 
-  &__messages{
-    height: calc(100vh - 190px);
+  &__message{
+    height: calc(100% - 190px);
     background-color: #fafafa;
     &__user{
-      margin: 0px 0 12px 40px ;
-      padding-top: 35px;
+      padding: 35px 0 0 40px;
       display: flex;
-      &__name{
+      &--name{
         color: #333333;
         font-size: 16px;
         font-weight: bolder;
         margin-right: 10px;
       }
-      &__date{
+      &--date{
         color: #999999;
         font-size: 12px;
       }
@@ -128,50 +131,53 @@ a{
     &__comment{
       color: #434a54;
       font-size: 14px;
-      margin: 0 0 46px 40px;
+      margin: 12px 0 11px 40px;
     }
   }
 
   &__formArea{
     height: 90px;
     background-color: #d2d2d2;
-    &__form{
-      height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    &__iBox{
+      height: 50px;
+      width: calc(100vw - 495px);
+      margin-left: 40px;
+      background-color: $wC;
       display: flex;
-      align-items: center;
-      &__iBox{
-        height: 50px;
-        width: calc(100vw - 495px);
-        margin-left: 40px;
-        background-color: $wC;
+      position:relative;
+      &__field{
+        height: 100%;
+        width: 100%;
+        padding-left: 10px;
+      }
+      &__image{
         display: flex;
-        position: relative;
-        &__field{
-          height: 100%;
-          width: 100%;
-          padding: 10px;
+        position: absolute;
+        top: 14px;
+        right: 10px;
+        &--icon{
+          font-size: 22px;          }
+        &--hidden{
+          display: none;
         }
-        &__image{
-          display: flex;
-          position: absolute;
-          top: 14px;
-          right: 10px;
-          &--icon{
-            font-size: 22px;          }
-          &--hidden{
-            display: none;
-          }
-        }
-        
       }
-      &__btn{
-        height: 50px;
-        width: 100px;
-        color: white;
-        font-size: 17px;
-        margin: 0 40px 0 15px;
-        background-color: #38aef0;
-      }
+    }
+    &__btn{
+      height: 50px;
+      width: 100px;
+      color: white;
+      font-size: 17px;
+      margin: 0 40px 0 15px;
+      background-color: #38aef0;
+      cursor: pointer;
     }
   }
 }
+
+
