--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,11 +1,10 @@
-.message
-  .upper-message
-    .upper-message__user-name
-      = message.user.name
-    .upper-message__date
-      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  .lower-message
-    - if message.content.present?
-      %p.lower-message__content
-        = message.content
-    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+.main__message__user
+  .main__message__user--name
+    = message.user.name
+  .main__message__user--date
+    = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+.main__message__comment
+  - if message.content.present?
+    %p.main__message__comment__content
+      = message.content
+  = image_tag message.image.url, class: 'main__message__comment__image' if message.image.present?
