--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,4 +1,5 @@
 .sideBar
+
   .sideBar__upper
     .sideBar__upper__user
       .sideBar__upper__user__name
@@ -10,11 +11,12 @@
         = link_to edit_user_path(current_user) do
           = icon('fa', 'cog', class:'sideBar__upper__user__menu--icon')
           %span<>
+
   .sideBar__lower
     - current_user.groups.each do |group|
-      .group
-        = link_to '#' do
-          .group__name
+      .sideBar__lower__group
+        = link_to group_messages_path(group.id) do
+          .sideBar__lower__group--name  
             = group.name
-          .group__message
-            メッセージはまだありません。
+          .sideBar__lower__group--message
+            = group.show_last_message
